[package]
name = "gtk-layer-shell-rs"
version = "0.1.0"
authors = ["David McKinney <mckinney@subgraph.com>"]
edition = "2018"

[package.metadata.system-deps.gtk_layer_shell_0]
name = "gtk-layer-shell-0"
version = "0.1"

[dependencies]
libc = "0.2"
bitflags = "1.0"

[dependencies.ffi]
package = "gtk-layer-shell-sys"
path = "./gtk-layer-shell-sys"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gtk-rs"
features = ["v3_22"]

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk-rs"

[dependencies.gtk-sys]
git = "https://github.com/gtk-rs/gtk-rs"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs"

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "2.0"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[patch.crates-io]
gdk = { version = "0.13.2", features = ["v3_22"] }
gtk = { version = "0.9.0", features = ["v3_16"] }
gtk-sys = "0.10.0"
gio = "0.9.1"
glib = "0.10.2"
glib-sys = "0.10.1"
