[package]
name = "gtk-layer-shell-rs"
version = "0.1.0"
authors = ["David McKinney <mckinney@subgraph.com>"]
edition = "2018"

[package.metadata.system-deps.gtk_layer_shell_0]
name = "gtk-layer-shell-0"
version = "0.1"

[dependencies]
libc = "0.2"
bitflags = "1.0"

[dependencies.ffi]
package = "gtk-layer-shell-sys"
path = "./gtk-layer-shell-sys"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gtk-rs"
version = "0.13.0"
features = ["v3_22"]

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk-rs"
version = "0.13.0"
features = ["v3_16"]

[dependencies.gtk-sys]
git = "https://github.com/gtk-rs/gtk-rs"
version = "0.13.0"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs"
version = "0.13.0"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs"
version = "0.13.0"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs"
version = "0.13.0"

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "2.0"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
